GH-29 fix(home-clients): to set max width of bg on resize. to make sure that there is no cut off grid

--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -296,13 +296,13 @@
     position: absolute;
 
     bottom: 0;
-    left: 0;
+    left: 50%;
 
     display: block;
 
-    width: calc(100% - (#{rem(16)} * 2));
+    width: 100%;
 
-    margin: 0 rem(16);
+    transform: translateX(-50%);
 
     background-size: $grid-size $grid-size;
     background-image:
@@ -310,15 +310,8 @@
       linear-gradient(to bottom, $tuf-color-card-border rem(1), transparent rem(1));
 
 
-    @media (min-width: rem(600)) {
-      width: calc(100% - (#{rem(32)} * 2));
-      margin: 0 rem(32);
-    }
-
     @media (min-width: rem(1024)) {
       background-size: $grid-size-d $grid-size-d;
-      width: calc(100% - (#{rem(48)} * 2));
-      margin: 0 rem(48);
     }
   }
 
